# taiwan-weather-chat

./: .gitignore  README.md  chat.html  pyproject.toml
cba/: auth.py  crud.py  database.py  main.py  models.py  rag_handler.py
cba/etl/: fetcher.py  transformer.py
